--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -9,7 +9,8 @@
 }
 
 .container-login form {
-	width: 400px;
+	max-width: 400px;
+	min-width: 300px;
 	height: 70vh;
 	display: flex;
 	flex-direction: column;
