--- a/src/components/crearEvento/crearEvento.css
+++ b/src/components/crearEvento/crearEvento.css
@@ -1,7 +1,7 @@
 .container-modal {
 	display: flex;
-	justify-content: left;
-	align-items: baseline;
+	justify-content: center;
+	align-items: center;
 	width: 100%;
 	position: fixed;
 	top: 0;
@@ -13,13 +13,22 @@
 }
 
 .form-container-eventos {
-	padding: 20px;
+	height: 80vh;
+	width: 80%;
+	padding: 10px;
 	text-align: left;
+	background: white;
+	border-radius: 20px;
+	box-shadow: 1px 1px 1px 2px rgba(1, 1, 1, 0.2);
+}
+
+.form-container-eventos section {
+	display: flex;
 }
 
 .form-container-eventos div h2 {
 	color: black;
-	font-size: 1.1rem;
+	font-size: 0.9rem;
 	font-weight: 700;
 }
 
@@ -34,8 +43,8 @@
 
 .div-nombre-del-evento input {
 	font-size: 0.8rem;
-	width: 100%;
-	padding: 5px;
+	width: 261px;
+	padding: 10px;
 	border-radius: 5px;
 	outline: none;
 	border: 1px lightgray solid;
@@ -43,4 +52,102 @@
 
 input#date {
 	display: none;
+	margin: 0;
+}
+
+.div-fecha-del-evento label {
+	display: flex;
+	color: grey;
+	font-size: 0.8rem;
+	border-radius: 5px;
+	border: 1px lightgrey solid;
+	padding: 12px 15px;
+	width: 250px;
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 10px;
+}
+
+.div-fecha-del-evento span {
+	font-size: 0.8rem;
+	color: red;
+}
+
+.react-datepicker {
+	font-family: 'Helvetica Neue', helvetica, arial, sans-serif;
+	font-size: 0.8rem;
+	background-color: #fff;
+	color: #000;
+	border: 1px solid #aeaeae;
+	border-radius: 0.3rem;
+	display: inline-block;
+	position: relative;
+	margin: 0;
+}
+
+.div-hora-del-evento div {
+	display: flex;
+	gap: 10px;
+}
+
+.div-hora-del-evento div label {
+	display: flex;
+	color: grey;
+	font-size: 0.8rem;
+	border-radius: 5px;
+	border: 1px lightgrey solid;
+	padding: 8px 10px;
+	width: 260px;
+	justify-content: space-around;
+	align-items: center;
+	margin-bottom: 10px;
+}
+
+.div-hora-del-evento div label input {
+	height: 0.8rem;
+	color: red;
+	padding: 3px;
+	border: none;
+}
+
+.div-file-del-evento {
+	margin: 20px 0;
+}
+
+.div-file-del-evento span {
+	text-align: center;
+	color: grey;
+	font-size: 0.9rem;
+	margin-right: 20px;
+}
+
+.div-file-del-evento input {
+	font-size: 0.8rem;
+	color: gray;
+}
+
+.div-informacion-del-evento textarea {
+	border: 1px lightgrey solid;
+	border-radius: 5px;
+	padding: 10px;
+	font: 0.8rem;
+}
+
+.div-buttom-del-evento {
+	display: flex;
+	position: relative;
+	width: 100%;
+}
+
+.div-buttom-del-evento button {
+	position: absolute;
+	top: 10px;
+	right: 20px;
+	width: 150px;
+	height: 40px;
+	color: #fff;
+	background-color: #f24726;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
 }
