--- a/src/components/crearEvento/crearEvento.css
+++ b/src/components/crearEvento/crearEvento.css
@@ -8,7 +8,8 @@
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background-color: rgba(255, 255, 255, 0.3);
+	/* background-color: rgba(255, 255, 255, 0.3); */
+	background-color: rgba(1, 1, 1, 0.3);
 	backdrop-filter: blur(10px);
 }
 
@@ -19,7 +20,7 @@
 	text-align: left;
 	background: white;
 	border-radius: 20px;
-	box-shadow: 1px 1px 1px 2px rgba(1, 1, 1, 0.2);
+	border: 1px #f24726 solid;
 }
 
 .form-container-eventos section {
@@ -48,6 +49,7 @@
 	border-radius: 5px;
 	outline: none;
 	border: 1px lightgray solid;
+	font-family: 'Times New Roman', Times, serif;
 }
 
 input#date {
@@ -131,6 +133,8 @@ input#date {
 	border-radius: 5px;
 	padding: 10px;
 	font: 0.8rem;
+	outline: none;
+	font-family: 'Times New Roman', Times, serif;
 }
 
 .div-buttom-del-evento {
@@ -147,6 +151,19 @@ input#date {
 	height: 40px;
 	color: #fff;
 	background-color: #f24726;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+#cancelar {
+	position: absolute;
+	top: 10px;
+	right: 180px;
+	width: 150px;
+	height: 40px;
+	color: #fff;
+	background-color: #f22626;
 	border: none;
 	border-radius: 5px;
 	cursor: pointer;
