--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,13 +1,35 @@
 .container-navbar {
 	width: 100%;
-	height: 30px;
+	height: 40px;
 	display: inline-flex;
 	justify-content: center;
 	align-items: center;
-	background-color: black;
+	background-color: rgba(1, 1, 1, 0.8);
 	color: #fff;
 }
 
-.container-navbar h1 {
+.menu-hamburguesa-navbar {
+	width: 50%;
+	display: flex;
+	justify-content: left;
 	font-size: 1rem;
+	padding-left: 10px;
+}
+
+.icons-navbar {
+	display: flex;
+	flex-direction: row;
+	justify-content: right;
+	align-items: center;
+	width: 50%;
+	gap: 10px;
+}
+
+.icons-navbar span img {
+	width: 30px;
+	height: 30px;
+	object-fit: contain;
+	border-radius: 50%;
+	background-color: #fff;
+	margin-right: 10px;
 }
