--- a/src/components/detallesEvento/detallesEvento.css
+++ b/src/components/detallesEvento/detallesEvento.css
@@ -51,3 +51,25 @@
 	justify-content: left;
 	flex-wrap: wrap;
 }
+
+.div-button-back-detalles-del-evento {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	top: 58px;
+	right: 15px;
+	border: none;
+	background-color: transparent;
+}
+
+.icon-buttom-regresar-detalles {
+	font-size: 1.5rem;
+	position: relative;
+}
+
+.icon-buttom-regresar-detalles:hover {
+	transform: scale(1.1);
+	color: #f24726;
+	cursor: pointer;
+}
