--- a/src/components/detallesMedia/detallesMedia.css
+++ b/src/components/detallesMedia/detallesMedia.css
@@ -1,11 +1,11 @@
-.container-ver-detalles-evento {
+.container-ver-detalles-media {
 	display: flex;
-	width: 100%;
+	width: 90%;
 	padding: 5px 20px;
 	height: 90vh;
 }
 
-.section-form-ver-detalles-del-evento {
+.section-form-ver-detalles-del-media {
 	width: 50%;
 	height: 100%;
 	display: flex;
@@ -14,16 +14,16 @@
 	flex-wrap: wrap;
 }
 
-.section-form-ver-detalles-del-evento > div {
+.section-form-ver-detalles-del-media > div {
 	display: flex;
 	flex-direction: column;
 }
 
-.section-form-ver-detalles-del-evento div > p {
+.section-form-ver-detalles-del-media div > p {
 	text-align: left;
 }
 
-.section-form-ver-detalles-del-evento div > textarea {
+.section-form-ver-detalles-del-media div > textarea {
 	padding: 10px;
 	font-size: 0.7rem;
 	font-weight: 200;
@@ -32,7 +32,7 @@
 	border-radius: 5px;
 }
 
-.section-form-ver-detalles-del-evento div > input {
+.section-form-ver-detalles-del-media div > input {
 	width: 300px;
 	font-size: 0.7rem;
 	font-weight: 200;
@@ -43,7 +43,7 @@
 	outline: none;
 }
 
-.section-img-ver-detalles-del-evento {
+.section-img-ver-detalles-del-media {
 	width: 50%;
 	height: 100%;
 	display: flex;
@@ -52,7 +52,39 @@
 	flex-wrap: wrap;
 }
 
-.div-button-back-detalles-del-evento {
+#imagen-video-detalles-media {
+	width: 400px;
+	height: 400px;
+	object-fit: contain;
+	margin: 0;
+	padding: 0;
+}
+
+.div-reproductor-detalles-media {
+	width: 60%;
+	display: inline-flex;
+	justify-content: space-evenly;
+	border: 1px lightgray solid;
+	border-radius: 5px;
+	padding: 10px;
+}
+
+.div-reproductor-detalles-media span {
+	text-align: center;
+	width: 33%;
+}
+
+.icons-reprodcutor-detalles-media {
+	font-size: 1.5rem;
+}
+
+.icons-reprodcutor-detalles-media:hover {
+	color: #f24726;
+	cursor: pointer;
+	transform: scale(1.2);
+	transition: 0.5s;
+}
+.div-button-back-detalles-del-media {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -63,12 +95,12 @@
 	background-color: transparent;
 }
 
-.icon-buttom-regresar-detalles {
+.icon-buttom-regresar-detalles-media {
 	font-size: 1.5rem;
 	position: relative;
 }
 
-.icon-buttom-regresar-detalles:hover {
+.icon-buttom-regresar-detalles-media:hover {
 	transform: scale(1.1);
 	color: #f24726;
 	cursor: pointer;
