--- a/src/components/crearMediaAudio/crearMediaAudio.css
+++ b/src/components/crearMediaAudio/crearMediaAudio.css
@@ -107,3 +107,27 @@
 	border-radius: 5px;
 	cursor: pointer;
 }
+
+.div-file-del-media-1 {
+	margin: 20px 0;
+	display: flex;
+	justify-content: left;
+	align-items: center;
+	gap: 20px;
+}
+
+.div-file-del-media-1 label {
+	border: 1px lightgray solid;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	height: 30px;
+	width: 100px;
+	cursor: pointer;
+}
+
+.div-file-del-media-1 span {
+	color: black;
+	font-size: 0.8rem;
+	font-weight: 700;
+}
