--- a/src/styles/panel.css
+++ b/src/styles/panel.css
@@ -20,7 +20,7 @@
 	margin-bottom: 10px;
 	background-color: rgba(255, 255, 255, 0.1);
 	border-radius: 20px;
-	gap: 20px;
+	gap: 10px;
 }
 
 .section-profile-aside-panel img {
@@ -29,6 +29,7 @@
 	object-fit: contain;
 	border-radius: 50%;
 	border: 1px #f24726 solid;
+	margin-top: 10px;
 }
 
 .section-profile-aside-panel p {
@@ -40,9 +41,10 @@
 
 .section-profile-aside-panel div button {
 	border: none;
+	font-size: 0.8rem;
 	width: 120px;
 	border-radius: 20px;
-	height: 40px;
+	height: 30px;
 	color: white;
 	background-color: #f24726;
 	cursor: pointer;
