--- a/src/styles/eventos.css
+++ b/src/styles/eventos.css
@@ -7,6 +7,7 @@
 	border-radius: 10px;
 	margin: 10px 20px;
 	background-color: rgba(255, 255, 255, 0.3);
+	z-index: 0;
 }
 
 .container-eventos-card:hover {
@@ -63,6 +64,7 @@
 	cursor: pointer;
 	align-items: center;
 	justify-content: center;
+	z-index: 1;
 }
 
 .div-eventos-button #eliminar span {
