--- a/src/styles/eventos.css
+++ b/src/styles/eventos.css
@@ -11,7 +11,7 @@
 }
 
 .container-eventos-card:hover {
-	background-color: #f75939;
+	background-color: #ec8874;
 	cursor: pointer;
 	transition: 0.5s;
 }
