--- a/src/components/crearEvento/crearEvento.css
+++ b/src/components/crearEvento/crearEvento.css
@@ -16,7 +16,7 @@
 	height: 80vh;
 	width: 80%;
 	display: flex;
-	flex-direction: row-reverse;
+	flex-direction: row;
 	padding: 10px;
 	text-align: left;
 	background: white;
