--- a/src/styles/eventos.css
+++ b/src/styles/eventos.css
@@ -3,14 +3,18 @@
 	display: inline-flex;
 	justify-content: left;
 	align-items: center;
-	border: 1px lightgray solid;
+	border: none;
 	border-radius: 10px;
 	margin: 10px 20px;
-	background-color: rgba(255, 255, 255, 0.3);
+	background-color: #ffffff;
 	z-index: 0;
+	box-shadow: 0.5px 0.5px 4px rgba(1, 1, 1, 0.3);
+	transition: 0.5s;
+	transform: scaleX(0.9);
 }
 
 .container-eventos-card:hover {
+	transform: scaleX(1);
 	background-color: #ec8874;
 	cursor: pointer;
 	transition: 0.5s;
