--- a/src/styles/media.css
+++ b/src/styles/media.css
@@ -3,15 +3,21 @@
 	display: inline-flex;
 	justify-content: left;
 	align-items: center;
-	border: 1px lightgray solid;
+	border: none;
 	border-radius: 10px;
 	margin: 10px 20px;
-	background-color: rgba(255, 255, 255, 0.3);
+	background-color: #ffffff;
+	z-index: 0;
+	box-shadow: 0.5px 0.5px 4px rgba(1, 1, 1, 0.3);
+	transition: 0.5s;
+	transform: scaleX(0.9);
 }
 
 .container-media-card:hover {
-	background-color: rgba(255, 255, 255, 0.5);
+	background-color: #ec8874;
+	transform: scaleX(1);
 	cursor: pointer;
+	transition: 0.5s;
 }
 
 .div-media-imagen {
