--- a/src/components/detallesMedia/detallesMedia.css
+++ b/src/components/detallesMedia/detallesMedia.css
@@ -14,16 +14,16 @@
 	flex-wrap: wrap;
 }
 
-.section-form-ver-detalles-del-media > div {
+.section-form-ver-detalles-del-media>div {
 	display: flex;
 	flex-direction: column;
 }
 
-.section-form-ver-detalles-del-media div > p {
+.section-form-ver-detalles-del-media div>p {
 	text-align: left;
 }
 
-.section-form-ver-detalles-del-media div > textarea {
+.section-form-ver-detalles-del-media div>textarea {
 	padding: 10px;
 	font-size: 0.7rem;
 	font-weight: 200;
@@ -32,7 +32,7 @@
 	border-radius: 5px;
 }
 
-.section-form-ver-detalles-del-media div > input {
+.section-form-ver-detalles-del-media div>input {
 	width: 300px;
 	font-size: 0.7rem;
 	font-weight: 200;
@@ -44,20 +44,23 @@
 }
 
 .section-img-ver-detalles-del-media {
+	margin-top: 70px;
 	width: 50%;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
-	justify-content: left;
-	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
 }
 
 #imagen-video-detalles-media {
-	width: 400px;
+	width: 350px;
 	height: 400px;
 	object-fit: contain;
 	margin: 0;
 	padding: 0;
+	border-radius: 20px;
+
 }
 
 .div-reproductor-detalles-media {
@@ -84,6 +87,7 @@
 	transform: scale(1.2);
 	transition: 0.5s;
 }
+
 .div-button-back-detalles-del-media {
 	display: flex;
 	justify-content: center;
