--- a/src/components/detallesMedia/detallesMedia.css
+++ b/src/components/detallesMedia/detallesMedia.css
@@ -44,19 +44,19 @@
 }
 
 .section-img-ver-detalles-del-media {
-	margin-top: 70px;
+	margin-top: 50px;
+	margin-left: 30px;
 	width: 50%;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	justify-content: left;
 }
 
 #imagen-video-detalles-media {
 	width: 350px;
 	height: 400px;
-	object-fit: contain;
+	object-fit: fill;
 	margin: 0;
 	padding: 0;
 	border-radius: 20px;
