--- a/src/components/detallesPeticiones/detallesPeticiones.css
+++ b/src/components/detallesPeticiones/detallesPeticiones.css
@@ -16,11 +16,22 @@
 }
 
 .div-card-1-peticiones {
-    width: 15%;
+    width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.div-card-1-peticiones img {
+    width: 150px;
+    height: 150px;
+    object-fit: contain;
+    border-radius: 5px;
 }
 
 .div-card-2-peticiones {
-    width: 45%;
+    width: 30%;
 }
 
 .div-card-2-peticiones div p {
@@ -84,5 +95,12 @@
     line-height: 30px;
     width: 85%;
     min-height: 250px;
+    margin-bottom: 30px;
+}
 
+@media (max-width: 700px) {
+    .div-1-detalles-peticiones {
+        display: flex;
+        flex-direction: column;
+    }
 }
